# toolchain-component-expat

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  expat_config.h.in
.github/workflows/: autotools-cmake.yml  coverage.yml  cppcheck.yml  expat_config_h.yml  linux.yml  macos.yml  valid-xml.yml
lib/: Makefile.in
xmlwf/: Makefile.in
